--- a/client/pages/device.html
+++ b/client/pages/device.html
@@ -14,7 +14,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="../assets/js/device.js"></script>
-    <!-- <script src="https://orangespaceman.github.io/lab-badge/lab-badge.min.js"></script> -->
+    <script src="https://orangespaceman.github.io/lab-badge/lab-badge.min.js"></script>
 
   </body>
 </html>
